<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="new_workout_note">New study note</string>
    <string name="undo_message">%1$s has been removed</string>
    <string name="no_history_img_description">Add study notes image</string>
    <string name="no_history_title">No history yet</string>
    <string name="no_history_message">After creating first session\nyou will be able to view it here</string>
    <string name="sessions_category_key">sessions_category</string>
    <string name="sessions_category_title">General</string>
    <string name="start_breaks_automatically_key">start_breaks_automatically</string>
    <string name="start_breaks_automatically_title">Start Breaks Automatically</string>
    <string name="start_breaks_automatically_summary">It will start breaks automatically after saving the subject</string>
    <string name="about_category_key">about_category</string>
    <string name="about_category_title">About</string>
    <string name="rate_app_key">rate_app</string>
    <string name="rate_app_title">Rate the App</string>
    <string name="rate_app_summary">Rate this app on the Play Store</string>
    <string name="privacy_policy_key">privacy_policy</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="version_key">version</string>
    <string name="version_title">Version</string>
    <string name="github_link">github</string>
    <string name="github_title">Github URL</string>
    <string name="github_description">See source code and contribute</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>